--- a/build.gradle
+++ b/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation "io.ktor:ktor-server-core:$ktor_version"
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
     implementation "org.koin:koin-ktor:$koin_version"
+    implementation "joda-time:joda-time:2.10.8"
 }
